Fix: nav links wrap when redimensioning

--- a/website/assets/styles/style.css
+++ b/website/assets/styles/style.css
@@ -70,6 +70,10 @@ nav {
   gap: 3rem;
 }
 
+.link {
+  display: contents;
+}
+
 .link a {
   position: relative;
   color: var(--color-secondary);
@@ -123,7 +127,6 @@ nav {
 }
 
 header {
-
   position: relative;
   padding-top: 2rem;
   display: grid;
@@ -370,9 +373,22 @@ footer .column>a:hover {
   text-align: center;
 }
 
+@supports (backdrop-filter: blur(10px)) {
+  .elemento-con-filtro {
+    backdrop-filter: blur(10px);
+    background-color: rgba(255, 255, 255, 0.5);
+  }
+}
+
+@supports not (backdrop-filter: blur(10px)) {
+  .elemento-con-filtro {
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+}
 
 
-@media (max-width: 800px) {
+
+@media (max-width: 850px) {
   .nav-links {
     display: none;
   }
@@ -399,7 +415,7 @@ footer .column>a:hover {
   }
 }
 
-@media (max-width: 601px) {
+@media (max-width: 700px) {
 
 
   body {
